--- a/pom.xml
+++ b/pom.xml
@@ -67,12 +67,15 @@
 				<artifactId>dockerfile-maven-plugin</artifactId>
 				<version>1.4.0</version>
 				<configuration>
+ 				
 					<!-- replace `callicoder` with your docker id-->
 					<repository>mashuk/spring-boot-websocket-chat-demo</repository>
 					<tag>${project.version}</tag>
 					<buildArgs>
 						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
 					</buildArgs>
+				<serverId>docker-hub</serverId>
+    				<registryUrl>https://index.docker.io/v1/</registryUrl>
 				</configuration>
 				<executions>
 					<execution>
