--- a/pom.xml
+++ b/pom.xml
@@ -68,14 +68,14 @@
 				<version>1.4.0</version>
 				<configuration>
  				
-					<!-- replace `callicoder` with your docker id-->
+				
 					<repository>mashuk/spring-boot-websocket-chat-demo</repository>
 					<tag>${project.version}</tag>
 					<buildArgs>
 						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
 					</buildArgs>
-				<serverId>docker-hub</serverId>
-    				<registryUrl>https://index.docker.io/v1/</registryUrl>
+				<!--<serverId>docker-hub</serverId>
+    				<registryUrl>https://index.docker.io/v1/</registryUrl>-->
 				</configuration>
 				<executions>
 					<execution>
@@ -83,7 +83,7 @@
 						<phase>install</phase>
 						<goals>
 							<goal>build</goal>
-							<goal>push</goal>
+							<!--<goal>push</goal>-->
 						</goals>
 					</execution>
 				</executions>
